--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="flex flex-col md:flex-row md:items-center md:justify-end gap-2 md:gap-3 mt-3 md:mt-0 py-2 md:py-0 md:ps-7">
           <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-gray-800 font-medium text-gray-800 hover:text-gray-800 focus:outline-hidden dark:border-neutral-200 dark:text-neutral-200 dark:hover:text-neutral-200" href="#" aria-current="page">Home</a>
           <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-gray-500 hover:text-gray-800 focus:outline-hidden dark:text-neutral-400 dark:hover:text-neutral-200" href="#2">Work</a>
-          <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-gray-500 hover:text-gray-800 focus:outline-hidden dark:text-neutral-400 dark:hover:text-neutral-200" href="#">Reviews</a>
+          <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-gray-500 hover:text-gray-800 focus:outline-hidden dark:text-neutral-400 dark:hover:text-neutral-200" href="#1">Project</a>
         </div>
       </div>
     </nav>
@@ -159,7 +159,7 @@
       <!-- End About -->
 
       <!-- Projects -->
-      <div class="mt-10 sm:mt-14">
+      <div id ='1' class="mt-10 sm:mt-14">
         <h2 class="mb-5 font-medium text-gray-800 dark:text-neutral-200">
           Projects
         </h2>
@@ -257,52 +257,6 @@
       </div>
       <!-- End Projects -->
 
-      <!-- Testimonials -->
-      <div class="mt-10 sm:mt-14">
-        <h2 class="mb-3 font-medium text-gray-800 dark:text-neutral-200">
-          Testimonials
-        </h2>
-
-        <!-- Grid -->
-        <div class="grid grid-cols-1 sm:grid-cols-2 gap-x-3 border-y border-gray-200 divide-y sm:divide-y-0 sm:divide-x divide-gray-200 dark:border-neutral-700 dark:divide-neutral-700">
-          <div class="sm:-ms-4 py-6 sm:px-4">
-            <!-- Review -->
-            <blockquote>
-              <span class="text-sm text-gray-800 dark:text-neutral-200">I'm absolutely floored by the level of care and attention to detail Eliana has put into this project and for one can guarantee that we will be a return customer.</span>
-
-              <footer class="mt-3">
-                <div class="flex items-center gap-x-2">
-                  <img class="shrink-0 size-5 rounded-full" src="https://images.unsplash.com/photo-1492562080023-ab3db95bfbce?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=2&w=320&h=320&q=80" alt="Avatar">
-                  <div class="grow">
-                    <div class="text-xs text-gray-500 dark:text-neutral-500">Josh Grazioso</div>
-                  </div>
-                </div>
-              </footer>
-            </blockquote>
-            <!-- End Review -->
-          </div>
-
-          <div class="py-6 sm:px-4">
-            <!-- Review -->
-            <blockquote>
-              <span class="text-sm text-gray-800 dark:text-neutral-200">To say that hiring Eliana has been life-changing is an understatement. My business has tripled and I got my life back.</span>
-
-              <footer class="mt-3">
-                <div class="flex items-center gap-x-2">
-                  <img class="shrink-0 size-5 rounded-full" src="https://images.unsplash.com/photo-1671726203390-cdc4354ee2eb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=2&w=320&h=320&q=80" alt="Avatar">
-                  <div class="grow">
-                    <div class="text-xs text-gray-500 dark:text-neutral-500">Nicole Grazioso</div>
-                  </div>
-                </div>
-              </footer>
-            </blockquote>
-            <!-- End Review -->
-          </div>
-        </div>
-        <!-- End Grid -->
-      </div>
-      <!-- End Testimonials -->
-
       <!-- Skills -->
       <div class="my-10 sm:my-14">
         <h2 class="mb-5 font-medium text-gray-800 dark:text-neutral-200">
@@ -323,202 +277,100 @@
                 <li
                   class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
                 >
-                  <!-- Figma icon -->
-                  <svg
-                    class="shrink-0 size-4 me-1"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  >
-                    <path
-                      d="M5 5.5A3.5 3.5 0 0 1 8.5 2H12v7H8.5A3.5 3.5 0 0 1 5 5.5z"
-                    />
-                    <path d="M12 2h3.5a3.5 3.5 0 1 1 0 7H12V2z" />
-                    <path
-                      d="M12 12.5a3.5 3.5 0 1 1 7 0 3.5 3.5 0 1 1-7 0z"
-                    />
-                    <path
-                      d="M5 19.5A3.5 3.5 0 0 1 8.5 16H12v3.5a3.5 3.5 0 1 1-7 0z"
-                    />
-                    <path
-                      d="M5 12.5A3.5 3.5 0 0 1 8.5 9H12v7H8.5A3.5 3.5 0 0 1 5 12.5z"
-                    />
-                  </svg>
-                  Figma
+                  Figma, Canvas.
                 </li>
               </ul>
             </dd>
           </dl>
 
-          <!-- Development -->
-          <dl class="flex flex-col sm:flex-row gap-1">
-            <dt class="min-w-40">
-              <span class="block text-sm text-gray-500 dark:text-neutral-500">
-                Development:
-              </span>
-            </dt>
-            <dd>
-              <ul>
-                <li
-                  class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
-                >
-                  <!-- HTML icon -->
-                  <svg
-                    class="shrink-0 size-4 me-1"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M3.41014 21.6082L1.5 0H22.5L20.5899 21.5965L11.9826 24"
-                      fill="currentColor"
-                    />
-                    <path
-                      d="M12.5 22V2H20.5L18.9734 20.083"
-                      fill="currentColor"
-                    />
-                    <path
-                      d="M5.5 4H12.5V6.64672H8.55789L8.81579 9.35756H12.5V11.9984H6.2614M6.38421 13.3276H9.18421L9.3807 15.4438L12.5 16.2367V19L6.77719 17.4843"
-                      fill="white"
-                      fill-opacity="0.8"
-                    />
-                  </svg>
-                  HTML
-                </li>
+      <!-- Development -->
+<dl class="flex flex-col sm:flex-row gap-1">
+  <dt class="min-w-40">
+    <span class="block text-sm text-gray-500 dark:text-neutral-500">
+      Development:
+    </span>
+  </dt>
+  <dd>
+    <ul>
+      <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
+        HTML
+      </li>
+      <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
+        CSS
+      </li>
+      <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
+        Tailwind CSS
+      </li>
+      <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
+        JavaScript
+      </li>
+      <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
+        TypeScript
+      </li>
+      <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
+        Python
+      </li>
+      <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
+        R
+      </li>
+      <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
+        Java
+      </li>
+      <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
+        Angular 18
+      </li>
+      <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
+        Node.js & Express
+      </li>
+      <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
+        MongoDB & SQL
+      </li>
+      <li class="me-1 inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
+        DevOps (AWS, Linux, NGINX, PM2, CI/CD),
+      </li>
+        <li class="me-1 inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
+        Agentic AI/RAGs
+      </li>
+    </ul>
+  </dd>
+</dl>
 
-                <li
-                  class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
-                >
-                  <!-- CSS icon -->
-                  <svg
-                    class="shrink-0 size-4 me-1"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M3.3448 21.6009L1.41895 0H22.5809L20.653 21.5975L11.987 24L3.3448 21.6009Z"
-                      fill="currentColor"
-                    />
-                    <path
-                      d="M19.0026 20.2227L20.6501 1.7666H12V22.1641L19.0026 20.2227Z"
-                      fill="currentColor"
-                    />
-                    <path
-                      d="M5.83407 9.77721L6.0715 12.4264H12V9.77721H5.83407ZM5.59778 7.06432H12V4.41504H5.35693L5.59778 7.06432ZM12 16.6576L11.9884 16.6607L9.03789 15.864L8.84931 13.7511H6.18981L6.56101 17.9108L11.9878 19.4174L12 19.414V16.6576Z"
-                      fill="white"
-                      fill-opacity="0.8"
-                    />
-                  </svg>
-                  CSS
-                </li>
+   <!-- Data & ML -->
+<dl class="flex flex-col sm:flex-row gap-1">
+  <dt class="min-w-40">
+    <span class="block text-sm text-gray-500 dark:text-neutral-500">
+      ML/AI:
+    </span>
+  </dt>
+  <dd>
+    <ul>
+      <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
+        Python
+      </li>
+      <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
+        R
+      </li>
+      <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
+        Pandas / NumPy
+      </li>
+      <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
+        Matplotlib
+      </li>
+      <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
+        Scikit-learn
+      </li>
+      <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
+        PyTorch
+      </li>
+      <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
+        YOLO Object Detection
+      </li>
 
-                <li
-                  class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
-                >
-                  <!-- Tailwind icon -->
-                  <svg
-                    class="shrink-0 size-4 me-1"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M12 5C8.8 5 6.8 6.6 6 9.8C7.2 8.2 8.6 7.6 10.2 8C11.1129 8.228 11.7653 8.89067 12.4876 9.62356C13.664 10.8178 15.0258 12.2 18 12.2C21.2 12.2 23.2 10.6 24 7.4C22.8 9 21.4 9.6 19.8 9.2C18.8871 8.972 18.2347 8.30933 17.5124 7.57644C16.336 6.38222 14.9742 5 12 5ZM6 12.2C2.8 12.2 0.8 13.8 0 17C1.2 15.4 2.6 14.8 4.2 15.2C5.11289 15.4284 5.76533 16.0907 6.48756 16.8236C7.664 18.0178 9.02578 19.4 12 19.4C15.2 19.4 17.2 17.8 18 14.6C16.8 16.2 15.4 16.8 13.8 16.4C12.8871 16.172 12.2347 15.5093 11.5124 14.7764C10.336 13.5822 8.97422 12.2 6 12.2Z"
-                      fill="currentColor"
-                    />
-                  </svg>
-                  Tailwind CSS
-                </li>
 
-                <li
-                  class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
-                >
-                  <!-- JS/TS icon (reuse React icon as generic) -->
-                  <svg
-                    class="shrink-0 size-4 me-1"
-                    width="160"
-                    height="143"
-                    viewBox="0 0 160 143"
-                    fill="none"
-                  >
-                    <path
-                      d="M160 71.2597C160 60.6604 146.726 50.6156 126.376 44.3865C131.072 23.6445 128.985 7.14227 119.788 1.85895C117.668 0.619648 115.19 0.0326126 112.483 0.0326126V7.30534C113.983 7.30534 115.19 7.59886 116.201 8.15328C120.636 10.6971 122.56 20.3832 121.06 32.8414C120.701 35.9071 120.114 39.1358 119.397 42.4297C113.004 40.8642 106.025 39.6576 98.6873 38.8748C94.2845 32.8414 89.7187 27.3624 85.1203 22.5683C95.7521 12.6865 105.732 7.27273 112.515 7.27273V0C103.547 0 91.806 6.39217 79.9348 17.4806C68.0636 6.4574 56.3229 0.130453 47.3543 0.130453V7.40318C54.1052 7.40318 64.1174 12.7843 74.7493 22.6009C70.1834 27.395 65.6176 32.8414 61.2801 38.8748C53.9095 39.6576 46.9303 40.8642 40.5381 42.4623C39.788 39.201 39.2336 36.0375 38.8422 33.0045C37.3094 20.5463 39.201 10.8602 43.6038 8.28373C44.5821 7.6967 45.8541 7.43579 47.3543 7.43579V0.163066C44.6148 0.163066 42.1362 0.750101 39.9837 1.9894C30.8194 7.27273 28.7648 23.7424 33.4937 44.4191C13.2083 50.6808 0 60.693 0 71.2597C0 81.8589 13.2735 91.9038 33.6241 98.1329C28.9278 118.875 31.0151 135.377 40.212 140.66C42.3318 141.9 44.8104 142.487 47.5499 142.487C56.5186 142.487 68.2593 136.095 80.1305 125.006C92.0016 136.029 103.742 142.356 112.711 142.356C115.45 142.356 117.929 141.769 120.082 140.53C129.246 135.247 131.3 118.777 126.572 98.1003C146.792 91.8712 160 81.8263 160 71.2597Z"
-                      fill="currentColor"
-                    />
-                    <path
-                      d="M79.9674 86.1639C88.1988 86.1639 94.8716 79.4911 94.8716 71.2597C94.8716 63.0284 88.1988 56.3555 79.9674 56.3555C71.7361 56.3555 65.0632 63.0284 65.0632 71.2597C65.0632 79.4911 71.7361 86.1639 79.9674 86.1639Z"
-                      fill="currentColor"
-                    />
-                  </svg>
-                  JavaScript / TypeScript
-                </li>
+    </ul>
+  </dd>
+</dl>
 
-                <li
-                  class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
-                >
-                  Angular 18
-                </li>
-
-                <li
-                  class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
-                >
-                  Node.js &amp; Express
-                </li>
-
-                <li
-                  class="me-1 inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
-                >
-                  MongoDB &amp; SQL
-                </li>
-              </ul>
-            </dd>
-          </dl>
-
-          <!-- Data & ML -->
-          <dl class="flex flex-col sm:flex-row gap-1">
-            <dt class="min-w-40">
-              <span class="block text-sm text-gray-500 dark:text-neutral-500">
-                Data &amp; Analytics:
-              </span>
-            </dt>
-            <dd>
-              <ul>
-                <li
-                  class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
-                >
-                  Python
-                </li>
-                <li
-                  class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
-                >
-                  Pandas / NumPy
-                </li>
-                <li
-                  class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
-                >
-                  Matplotlib
-                </li>
-                <li
-                  class="me-1 inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
-                >
-                  Scikit-learn (ML basics)
-                </li>
-              </ul>
-            </dd>
-          </dl>
 
           <!-- Collaboration -->
           <dl class="flex flex-col sm:flex-row gap-1">
@@ -557,7 +409,7 @@
           <dl class="flex flex-col sm:flex-row gap-1">
             <dt class="min-w-40">
               <span class="block text-sm text-gray-500 dark:text-neutral-500">
-                Engineering Expertise:
+                Fullstack Development (mostly backend):
               </span>
             </dt>
             <dd>
@@ -565,7 +417,7 @@
                 <li
                   class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
                 >
-                  Full-stack web development (MEAN)
+                  Full-stack web development (MEAN), Springboot (Java)
                 </li>
                 <li
                   class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
@@ -590,7 +442,7 @@
           <dl class="flex flex-col sm:flex-row gap-1">
             <dt class="min-w-40">
               <span class="block text-sm text-gray-500 dark:text-neutral-500">
-                Soft Skills:
+                Other Skills:
               </span>
             </dt>
             <dd>
@@ -606,14 +458,25 @@
                   Problem solving
                 </li>
                 <li
-                  class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
-                >
-                  Attention to detail
-                </li>
-                <li
                   class="me-1 inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
                 >
                   Time management &amp; ownership
+                </li>
+                      <li
+                  class="me-1 inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
+                >
+                  Linear Algebra, Calculus, Statistics/Probabilities
+                </li>
+                      </li>
+                                  <li
+                  class="me-1 inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
+                >
+                  Excel, Microsoft PowerPoint, Microsoft Word
+                </li>
+                      <li
+                  class="me-1 inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
+                >
+                  Vietnamese & English bilingual
                 </li>
               </ul>
             </dd>
