--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
             />
 
             <p class="font-semibold text-sm text-gray-800 dark:text-neutral-200">
-              Bachelor of Information Technology – Major in Software Development
+              Bachelor of Information Technology <br>Major in Business Informarion Systems
             </p>
             <p class="mt-1 text-sm text-gray-600 dark:text-neutral-400">
               Monash University
