--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <nav class="mt-4 relative max-w-2xl w-full bg-white border border-gray-200 rounded-[24px] mx-2 flex flex-wrap md:flex-nowrap items-center justify-between p-1 ps-4 md:py-0 sm:mx-auto dark:bg-neutral-900 dark:border-neutral-700">
       <div class="flex items-center">
         <!-- Logo -->
-        <a class="flex-none rounded-md text-xl inline-block font-semibold focus:outline-hidden focus:opacity-80" href="https://preline.co/templates/personal/index.html" aria-label="Preline">
+        <a class="flex-none rounded-md text-xl inline-block font-semibold focus:outline-hidden focus:opacity-80" href="/" aria-label="Preline">
             Nam's Portfolio
         </a>
         <!-- End Logo -->
