--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
                   Delivered a full e-commerce platform for a real non-profit client as part of a Monash University industry capstone project.
                 </li>
                 <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
-                  Built core features including product catalog, cart system, order workflow, and admin management using CakePHP, JavaScript, and Tailwind.
+                  Built core features including product catalog, cart system, order workflow, CMS, and admin management using CakePHP, JavaScript, and Tailwind.
                 </li>
                 <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
                   Integrated secure payment processing through Stripe, supporting customer checkout and automated order confirmations.
