--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                   <circle cx="11" cy="11" r="8" />
                   <path d="m21 21-4.3-4.3" />
                 </svg>
-                <span class="text-xs">View</span>
+                <span class="text-xs">In development</span>
               </div>
             </div>
           </a>
