--- a/index.html
+++ b/index.html
@@ -111,17 +111,10 @@
       <!-- About -->
       <div class="mt-8">
         <p class="text-sm text-gray-600 dark:text-neutral-400">
-          Versatile and driven Information Technology student with expertise in full-stack web
-            development, data analytics, business analytics, and project management (Agile).
-            Experienced in delivering scalable and efficient solutions through internships, industry
-            collaborations, and team-based projects. Proficient in MEAN stack, Python, SQL, and data
-            visualization tools, with a strong passion for creating user-centric, high-performance
-            applications.
+       Driven Information Technology student at Monash University specialising in full-stack web development, data analytics, and machine learning. Skilled in MEAN stack, Python, R, SQL, deep learning (PyTorch, YOLO, keypoint extraction), and applied mathematics including linear algebra and calculus. Experienced in delivering scalable, production-ready systems across internships, industry collaborations, and team-based projects, with additional strengths in business analytics and Agile project management. Passionate about building user-centric applications and applying AI and ML to real-world problems. <br> <br>
+       Currently pursuing a Master in Artificial Intelligence and Machine Learning at the University of Melbourne.
         </p>
 
-        <p class="mt-3 text-sm text-gray-600 dark:text-neutral-400">
-          Currently, I work remotely for Notion, where I design template UIs, convert them into HTML and CSS, and provide comprehensive support to our users. I am passionate about crafting elegant and functional designs that enhance user experiences.
-        </p>
 
                     <ul class="mt-5 flex flex-col gap-y-3">
             <li class="flex items-center gap-x-2.5">
@@ -174,7 +167,7 @@
                   <circle cx="11" cy="11" r="8" />
                   <path d="m21 21-4.3-4.3" />
                 </svg>
-                <span class="text-xs">View</span>
+                <span class="text-xs">Corporate Website (Intern)</span>
               </div>
             </div>
           </a>
@@ -200,7 +193,7 @@
                   <circle cx="11" cy="11" r="8" />
                   <path d="m21 21-4.3-4.3" />
                 </svg>
-                <span class="text-xs">View</span>
+                <span class="text-xs">First Project - Lots of bugs</span>
               </div>
             </div>
           </a>
@@ -213,7 +206,7 @@
                   <circle cx="11" cy="11" r="8" />
                   <path d="m21 21-4.3-4.3" />
                 </svg>
-                <span class="text-xs">View</span>
+                <span class="text-xs">Monash Non-Profit Client</span>
               </div>
             </div>
           </a>
