--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             </div>
           </a>
 
-          <a class="group block relative overflow-hidden rounded-lg" href="https://ecom-six-eosin.vercel.app/#/">
+          <a class="group block relative overflow-hidden rounded-lg" href="https://missscrappy.com">
             <img class="w-full size-40 object-cover bg-gray-100 rounded-lg dark:bg-neutral-800" src="assets/proj_2.jpg" alt="Project">
             <div class="absolute bottom-1 end-1 opacity-0 group-hover:opacity-100 transition">
               <div class="flex items-center gap-x-1 py-1 px-2 bg-white border border-gray-200 text-gray-800 rounded-lg dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-200">
