--- a/index.html
+++ b/index.html
@@ -185,19 +185,6 @@
             </div>
           </a>
 
-          <a class="group block relative overflow-hidden rounded-lg" href="https://bloombox-three.vercel.app/#/">
-            <img class="w-full size-40 object-cover bg-gray-100 rounded-lg dark:bg-neutral-800" src="assets/proj_4.jpg" alt="Project">
-            <div class="absolute bottom-1 end-1 opacity-0 group-hover:opacity-100 transition">
-              <div class="flex items-center gap-x-1 py-1 px-2 bg-white border border-gray-200 text-gray-800 rounded-lg dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-200">
-                <svg class="shrink-0 size-3" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                  <circle cx="11" cy="11" r="8" />
-                  <path d="m21 21-4.3-4.3" />
-                </svg>
-                <span class="text-xs">First Project - Lots of bugs</span>
-              </div>
-            </div>
-          </a>
-
           <a class="group block relative overflow-hidden rounded-lg" href="https://shop.designerdigsforkids.com/">
             <img class="w-full size-40 object-cover bg-gray-100 rounded-lg dark:bg-neutral-800" src="assets/proj_3.jpg" alt="Project">
             <div class="absolute bottom-1 end-1 opacity-0 group-hover:opacity-100 transition">
@@ -591,7 +578,7 @@
             <div class="grow pb-8 group-last:pb-0">
 
               <p class="font-semibold text-sm text-gray-800 dark:text-neutral-200">
-                Full-Stack Developer – Non-Profit E-Commerce Project (Monash Capstone) - Designer Digs For Kids
+                Frontend Developer / Business Analyst – Non-Profit E-Commerce Project (Monash Capstone) - Designer Digs For Kids
               </p>
 
               <ul class="list-disc ms-6 mt-3 space-y-1.5">
