--- a/index.html
+++ b/index.html
@@ -262,23 +262,7 @@
 
         <!-- List -->
         <div class="space-y-3">
-          <!-- Design Tools -->
-          <dl class="flex flex-col sm:flex-row gap-1">
-            <dt class="min-w-40">
-              <span class="block text-sm text-gray-500 dark:text-neutral-500">
-                Design Tools:
-              </span>
-            </dt>
-            <dd>
-              <ul>
-                <li
-                  class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
-                >
-                  Figma, Canvas.
-                </li>
-              </ul>
-            </dd>
-          </dl>
+
 
       <!-- Development -->
 <dl class="flex flex-col sm:flex-row gap-1">
@@ -326,7 +310,7 @@
         DevOps (AWS, Linux, NGINX, PM2, CI/CD),
       </li>
         <li class="me-1 inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
-        Agentic AI/RAGs
+        Agentic AI/RAGs, LangChain
       </li>
     </ul>
   </dd>
@@ -419,7 +403,7 @@
                 <li
                   class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
                 >
-                  REST API &amp; authentication
+                  REST, GraphQL, WebSocket
                 </li>
                 <li
                   class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
@@ -429,7 +413,7 @@
                 <li
                   class="me-1 inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
                 >
-                  Responsive UI with Tailwind
+                  Flutter, and Angular
                 </li>
               </ul>
             </dd>
