--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
             </div>
           </a>
 
-      <a class="group block relative overflow-hidden rounded-lg" href="#">
+      <a class="group block relative overflow-hidden rounded-lg" href="https://colab.research.google.com/drive/1-X01ozTQms3if7hZmRh-gr8NN7BMR0AK?usp=sharing">
   <img 
     class="w-full size-40 object-cover bg-gray-100 rounded-lg dark:bg-neutral-800" 
-    src="https://placehold.co/400x400?text=Incoming" 
+    src="assets/Hadron-like-event-left-gamma-like-event-Gam1-width013-right-The.png" 
     alt="Incoming Project"
   />
   <div class="absolute bottom-1 end-1 opacity-0 group-hover:opacity-100 transition">
@@ -211,7 +211,7 @@
         <circle cx="11" cy="11" r="8" />
         <path d="m21 21-4.3-4.3" />
       </svg>
-      <span class="text-xs">View</span>
+      <span class="text-xs">Basic Supervised Study (Still working on it)</span>
     </div>
   </div>
 </a>
