--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 <a class="group block relative overflow-hidden rounded-lg" href="#">
   <img 
     class="w-full size-40 object-cover bg-gray-100 rounded-lg dark:bg-neutral-800" 
-    src="https://placehold.co/400x400?text=Incoming" 
+    src="assets/tennis_pred.jpg" 
     alt="Incoming Project"
   />
   <div class="absolute bottom-1 end-1 opacity-0 group-hover:opacity-100 transition">
@@ -228,7 +228,7 @@
         <circle cx="11" cy="11" r="8" />
         <path d="m21 21-4.3-4.3" />
       </svg>
-      <span class="text-xs">View</span>
+      <span class="text-xs">Tennis Tracking (Also in development)</span>
     </div>
   </div>
 </a>
