--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
         <!-- Image Grid -->
         <div class="grid grid-cols-2 sm:grid-cols-3 gap-2">
-          <a class="group block relative overflow-hidden rounded-lg" href="https://www.dongdothanh.com/#/">
+          <a class="group block relative overflow-hidden rounded-lg" href="https://drive.google.com/file/d/1F3RSF_cR6w6trRLcbL1Y9b5uP-1xGek1/view">
             <img class="w-full size-40 object-cover bg-gray-100 rounded-lg dark:bg-neutral-800" src="assets/proj_1.jpg" alt="Project">
             <div class="absolute bottom-1 end-1 opacity-0 group-hover:opacity-100 transition">
               <div class="flex items-center gap-x-1 py-1 px-2 bg-white border border-gray-200 text-gray-800 rounded-lg dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-200">
@@ -167,7 +167,7 @@
                   <circle cx="11" cy="11" r="8" />
                   <path d="m21 21-4.3-4.3" />
                 </svg>
-                <span class="text-xs">Corporate Website (Intern)</span>
+                <span class="text-xs">Corporate Website (Intern) - view as video</span>
               </div>
             </div>
           </a>
